parser/src/test/resources/corpus/valid/25_accrue_simple.ff
rule "Accrue Simple" {
  accrue rate on basis using day_count
}
