parser/src/test/resources/corpus/invalid/22_accrue_missing_using.ff
rule "Accrue Missing Using" {
  accrue rate on basis actual/365
}
